--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, at. Aperiam suscipit consectetur aut in fugiat consequuntur facere enim eaque at magni fugit autem quo, aspernatur natus officia ad voluptatum?</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat ex dolorum cupiditate nobis nisi esse consequuntur laudantium quaerat eligendi iure, dolore itaque incidunt? Maxime facere aperiam sit odit magnam nemo.</p>
 </body>
 </html>
